style(hero__md): fix white space
This commit includes changes to white spaces on md screens.
The changes include:

- Adjusting font size of hero info block.
- Resizing of hero image to appropriate width.

These changes ensure that the web page renders well on md devices and
window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -1540,6 +1540,7 @@ vertical-align: top;
   }
 
 /* main */
+
 .main-block {
   grid-area: main;
   min-height: 20rem;
@@ -1551,18 +1552,18 @@ vertical-align: top;
   display: flex;
   flex-direction: column-reverse; 
   align-items:center;
-  margin-top: 13rem;  
+  margin-top: 26rem;  
   padding:0 4% 2rem;
 }
 
 .hero__info-block {
   min-height: 20rem;
-  width: 100%;
+  width: clamp(84%, 10vw, 80%);
   display: flex;
   flex-direction: column; 
-  justify-content: center;
-  margin-top:5rem;
-  gap: 1.7rem;   
+  justify-content: center; 
+  gap: 2.2rem;  
+  margin-top:4rem; 
 }
 
 .hero__info-heading-block {
@@ -1570,7 +1571,7 @@ vertical-align: top;
 }
 
 .hero__info-heading {
-  font-size: 3.2rem;
+  font-size: 3.5rem;
   font-weight: 600;
   line-height: 1.2;
   color: #040403;
@@ -1585,7 +1586,7 @@ vertical-align: top;
 }
 
 .hero__info-text {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 /* hero__offer-block */
@@ -1596,9 +1597,15 @@ vertical-align: top;
 .hero__offer-list-item {
   background: url(assets/Checkmark.svg) no-repeat left center;
   padding-left: 3.5rem;
-  line-height: 2.5;
+  line-height: 1.5;
+  gap:3rem;
   list-style: none;
-  font-weight:600;
+  font-weight:600; 
+ font-size:1.8rem;
+}
+
+.hero__offer-list-item:not(:last-of-type) {
+  margin-bottom:1.35rem
 }
 
 /* hero__mail-block */
@@ -1612,8 +1619,9 @@ vertical-align: top;
 .hero__mail {
   min-height: 7rem;
   width: 100%;
-  display: flex;
+  display: flex; 
   gap: 2rem; 
+  flex-wrap: wrap;
 }
 
 .mail__input-field {
@@ -1623,11 +1631,15 @@ vertical-align: top;
 }
 
 .mail__input {
-  padding: 1.5rem 1.4rem;
+  width: clamp(20rem, 25rem, 30rem);
+  min-height: 5rem;
   border-color: #fefefe;
-  border-radius: 0.5rem;
-  outline: none;
-  font-size: 1.5rem;
+  border-radius: 0.5rem; 
+  font-size: 1.6rem;
+}
+
+.mail__input::placeholder {
+  padding-left:5%;
 }
 
 .mail__button-block {
@@ -1637,9 +1649,8 @@ vertical-align: top;
 }
 
 .mail__button {
-  width: 10rem;
-  min-height: 5rem;
-  /* padding: 1.6rem 1.1rem; */
+  width: clamp(6rem, 12rem, 15rem);
+  min-height: 5rem; 
   border: none;
   border-radius: 0.3rem;
   font-size: 1.4rem;
@@ -1649,7 +1660,7 @@ vertical-align: top;
 }
 
 .hero__image-block {
-  min-height: 40rem;
+  min-height: 55rem;
   width: 100%;
   display: flex;
   background: url(assets/Hero\ Image\ \(Mobile\).png) no-repeat center;
